--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,24 @@ matrix:
           - libboost1.58-tools-dev
     - env: variant=test_debug tests=1 toolset=gcc-sanitizer
     - env: variant=test_debug sim=1 crypto=openssl toolset=gcc-sanitizer
-    - env: variant=test_release coverage=1 tests=1 toolset=gcc-coverage python=1
-    - env: autotools=1 toolset=gcc
+    - env: variant=test_release coverage=1 tests=1 toolset=gcc-coverage python=1 python_dist=1
+    - env: dist=1 toolset=gcc
+      addons:
+        apt:
+          packages:
+          - python-docutils
+          - python-pygments
+          - python-pil
+          - python-aafigure
+          - graphviz
+          - libboost-dev
+          - libboost-system-dev
+          - libboost-python-dev
     - env: cmake=1 toolset=gcc
+      addons:
+        apt:
+          packages:
+          - ninja-build
     - env: variant=test_debug crypto=openssl docs=1 tests=1 examples=1 tools=1 python=1 toolset=darwin ios=1
       os: osx
       osx_image: xcode9.2
@@ -47,7 +62,6 @@ addons:
     packages:
     - python2.7-dev
     - g++-5
-    - ninja-build
 
 before_install:
 
@@ -253,6 +267,9 @@ script:
         LD_LIBRARY_PATH=./dependencies python test.py -b;
       fi;
     fi'
+  - 'if [[ "$python_dist" == "1" ]]; then
+      python setup.py bdist;
+    fi'
   - cd ../..;
 
 # simulation
@@ -273,15 +290,12 @@ script:
     fi
   - cd ..
 
-# run through autotools and ./configure to make sure it works
-  - if [[ "$autotools" == "1" ]]; then
-      (cd $BOOST_ROOT; bjam -j2 stage);
-      ./autotool.sh &&
-      export CXX=g++-5 &&
-      export CC=gcc-5 &&
-      export CXXFLAGS="-Werror -Wno-deprecated-declarations" &&
-      ./configure --enable-debug --enable-encryption --enable-examples --enable-tests --enable-python-binding &&
-      LD_LIBRARY_PATH=$BOOST_ROOT/stage/lib make -j2 check;
+# run through building a tarball and make sure it works
+  - if [[ "$dist" == "1" ]]; then
+      make dist &&
+      cd libtorrent-rasterbar-1.1.2 &&
+      make &&
+      make examples python-binding tools examples check;
     fi
 
   - ccache --show-stats
