--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -372,6 +372,7 @@ set(sources
 	disk_job_fence
 	disk_job_pool
 	disk_buffer_pool
+	disk_interface
 	disk_io_thread
 	disk_io_thread_pool
 	disabled_disk_io
