--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,21 +4,21 @@ branches:
     - master
     - RC_1_2
     - RC_1_1
-os: Visual Studio 2015
+os: Visual Studio 2017
 clone_depth: 1
 environment:
   matrix:
     - cmake: 1
     - variant: test_debug
-      compiler: msvc-14.0
+      compiler: msvc-14.1
       model: 64
       sim: 1
     - variant: test_debug
-      compiler: msvc-14.0
+      compiler: msvc-14.1
       model: 32
       bjam: 1
     - variant: test_release
-      compiler: msvc-14.0
+      compiler: msvc-14.1
       model: 64
       python: 1
       python_dist: 1
@@ -43,12 +43,12 @@ install:
   - if not defined linkflags ( set linkflags="" )
   - if not defined include ( set include="" )
   - cd %ROOT_DIRECTORY%
-  - set BOOST_ROOT=c:\Libraries\boost_1_67_0
+  - set BOOST_ROOT=c:\Libraries\boost_1_69_0
   - set BOOST_BUILD_PATH=%BOOST_ROOT%\tools\build
   - echo %BOOST_ROOT%
   - echo %BOOST_BUILD_PATH%
   - set PATH=%PATH%;%BOOST_BUILD_PATH%\src\engine\bin.ntx86
-  - ps: '"using msvc : 14.0 ;`nusing gcc : : : <cxxflags>-std=c++11 ;`nusing python : 3.5 : c:\\Python35-x64 : c:\\Python35-x64\\include : c:\\Python35-x64\\libs ;`n" | Set-Content $env:HOMEDRIVE\$env:HOMEPATH\user-config.jam'
+  - ps: '"using msvc : 14.1 ;`nusing gcc ;`nusing python : 3.5 : c:\\Python35-x64 : c:\\Python35-x64\\include : c:\\Python35-x64\\libs ;`n" | Set-Content $env:HOMEDRIVE\$env:HOMEPATH\user-config.jam'
   - type %HOMEDRIVE%%HOMEPATH%\user-config.jam
   - cd %ROOT_DIRECTORY%
   - set PATH=c:\msys64\mingw32\bin;%PATH%
@@ -81,8 +81,10 @@ build_script:
   # python binding
   - cd %ROOT_DIRECTORY%\bindings\python
   # we use 64 bit python builds
+  # boost.python itself doesn't build warning free, so we can't build
+  # with warnings-as-errors
   - if defined python (
-    b2.exe --hash openssl-version=pre1.1 warnings=all warnings-as-errors=on -j2 %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% %linkflags% %include% link=shared crypto=%crypto% libtorrent-link=shared stage_module stage_dependencies
+    b2.exe --hash openssl-version=pre1.1 warnings=all -j2 %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% %linkflags% %include% link=shared crypto=%crypto% libtorrent-link=shared stage_module stage_dependencies
     )
   - if defined python_dist (
     c:\Python35-x64\python.exe setup.py bdist --format=msi
@@ -95,11 +97,16 @@ build_script:
     )
 
   # minimal support for cmake build
-  - cd %ROOT_DIRECTORY%
-  - mkdir build && cd build
+  # we need to build the boost libraries we use with C++14
+  # and stage it for cmake to pick up
   - if defined cmake (
+    cd %BOOST_ROOT% &&
+    bjam cxxstd=14 release --with-python --with-system --layout=system address-model=64 link=shared stage &&
+    cd %ROOT_DIRECTORY% &&
+    mkdir build &&
+    cd build &&
     set "PATH=c:\Python27-x64;%PATH%" &&
-    cmake -DCMAKE_CXX_STANDARD=11 -Dbuild_tests=ON -Dbuild_examples=ON -Dbuild_tools=ON -Dpython-bindings=%python% -Dboost-python-module-name="python" -Dskip-python-runtime-test=true -DPython_ADDITIONAL_VERSIONS="2.7" -G "Visual Studio 14 2015 Win64" .. &&
+    cmake -DBOOST_LIBRARYDIR=%BOOST_ROOT%\stage\lib -DCMAKE_CXX_STANDARD=14 -Dbuild_tests=ON -Dbuild_examples=ON -Dbuild_tools=ON -Dpython-bindings=%python% -Dboost-python-module-name="python" -Dskip-python-runtime-test=true -DPython_ADDITIONAL_VERSIONS="2.7" -G "Visual Studio 14 2015 Win64" .. &&
     cmake --build . --config Release -- -verbosity:minimal
     )
 
