--- a/docs/makefile
+++ b/docs/makefile
@@ -22,6 +22,7 @@ REFERENCE_TARGETS = \
 	reference-Create_Torrents \
 	reference-Error_Codes \
 	reference-Storage \
+	reference-Custom_Storage \
 	reference-Utility \
 	reference-Bencoding \
 	reference-Alerts \
