--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ branches:
     - master
     - RC_1_2
     - RC_1_1
-os: Visual Studio 2015
+image: Visual Studio 2015
 clone_depth: 1
 environment:
   matrix:
