add document for significant API changes for next major version of libtorrent

--- a/docs/makefile
+++ b/docs/makefile
@@ -16,6 +16,7 @@ endif
 REFERENCE_TARGETS = \
 	manual-ref \
 	upgrade_to_1.2-ref \
+	upgrade_to_2.0-ref \
 	reference \
 	reference-Core \
 	reference-Plugins \
