initial documentation for bundled support for fuzzing

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,7 @@ DOCS_PAGES = \
   docs/projects.html              \
   docs/python_binding.html        \
   docs/tuning.html                \
+  docs/fuzzing.html               \
   docs/settings.rst               \
   docs/stats_counters.rst         \
   docs/troubleshooting.html       \
@@ -80,6 +81,7 @@ DOCS_PAGES = \
   docs/projects.rst               \
   docs/python_binding.rst         \
   docs/tuning.rst                 \
+  docs/fuzzing.rst                \
   docs/troubleshooting.rst        \
   docs/udp_tracker_protocol.rst   \
   docs/utp.rst                    \
