add hash picker and hash request messages

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -75,6 +75,7 @@ libtorrent_rasterbar_la_SOURCES = \
   fingerprint.cpp                 \
   generate_peer_id.cpp            \
   gzip.cpp                        \
+  hash_picker.cpp                 \
   hasher.cpp                      \
   hex.cpp                         \
   http_connection.cpp             \
