improve file_storage::sanitize_symlinks

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -120,7 +120,8 @@ TEST_TORRENTS = \
   url_seed_multi_space.torrent \
   url_seed_multi_space_nolist.torrent \
   url_seed_multi_single_file.torrent \
-  whitespace_url.torrent
+  whitespace_url.torrent \
+  overlapping_symlinks.torrent
 
 MUTABLE_TEST_TORRENTS = \
   test1.torrent \
