split out dumping of raw bencoded structure from dump_torrent into its own example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ set(single_file_examples
     custom_storage
     stats_counters
     dump_torrent
+    dump_bdecode
     make_torrent
     connection_tester
     upnp_test)
