--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ branches:
     - master
     - RC_1_2
     - RC_1_1
-image: Previous Visual Studio 2017
+image: Visual Studio 2019
 clone_depth: 1
 environment:
   matrix:
